// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperatingSystemCard should not render hasArchitecture 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-9"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          0 modules
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should not render hasKernelModules 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-11"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should not render hasKernelRelease 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-8"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          0 modules
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should not render hasLastBoot 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-10"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          0 modules
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should not render hasRelease 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-7"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          0 modules
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should render correctly - no data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-1"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="pf-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
          >
            <span
              class="pf-u-screen-reader"
            />
          </div>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should render correctly with data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-2"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          0 modules
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should render correctly with rhsm facts 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-4"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          x86_64
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should render enabled/disabled 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-3"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          0 modules
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`OperatingSystemCard should render extra 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-12"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        Operating system
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-release
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel release
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-kernel
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Architecture
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-arch
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Last boot time
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Kernel modules
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          0 modules
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          something
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          with click
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//undefined"
          >
            1 tests
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
